assets/styles/Classic.css
/* new CSS ------------------------------------------*/
body {
	overflow: hidden;
	width: 784px;
}
body::after {
    content: "";
    display: block;
}
#header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
}
.HDRSS {
    display: none;
    position: absolute;
    top: 50px;
    width: 98vw;
    overflow-y: scroll;
    overflow-x: hidden;
    height: 500px;
}
#HDRSSBtn {
    display: flex;
    width: 100%;
}
#HDClassicBtn {
    display: flex;
    width: 100%;
}

footer {
    position: fixed;
    bottom: 0;
    width: 98vw;
    height: 40px;
    background-color: var(--bg-color);
    border-top: 1px solid #ccc;
    display: flex;
    justify-content:flex-start;
    align-items:center;
}

#spreadsheetPrompt {
    display:none;
}

#statusSheetURL, 
#statusSaveDefaultInput,
#statusSaveDefaultInputInputTextMenu {
    color: green;
}


/* V2 classic & RSS mode Buttons */
.HDClassic {
    display: flex;
    flex-direction: column;
}

/* ---- top-main ---- */
.topMain {
	height: 50px;
	display: grid;
	align-items: center;
	grid-template-columns: 30px auto 30px;
}
/* title & settings */
#title {
	width: 100%;
	grid-column: 2;
}

/* settings tooth weel */
.openSettings {
	background: none;
	border: none;
	cursor: pointer;
	grid-column: 3;
	justify-self: end;
}
.openSettings .icon {
    width: 24px;
    height: 24px;
    opacity: 0.8;
}
.openSettings:hover .icon {
    opacity: 1;
}

/* ---- main ---- */

.table-2 {
	width: 100%;
	border-collapse: collapse;
	background-color: var(--bg-color);
	table-layout: fixed;
}

.table-2-container {
    max-width: 10000px;
    overflow-x: hidden;
    width: 100%;
}

.table-1-tags-container {
	height: 50px;
}

.table-2-container HEADER:not(.tags-header) {
    width: 60%;
}


input.autoInput,
select.autoInput {
    width: auto;
    text-overflow: ellipsis;
    white-space: nowrap;
    height: inherit;
    overflow: hidden;
    border: none;
    box-sizing: border-box;
    padding: 2px;
    font-size: 14px;
    list-style: none;
    text-align: center;
    scroll-behavior: smooth;
    outline: none;
    outline-width: 0;
    outline-color: var(--Text-color);
    color: var(--Text-color);
    background-image: none;
    background-color: var(--bg-color);
}
td, th {
    text-align: center;
    vertical-align: middle;
    border: 1px solid #ccc;
    padding: 0;
}
th {
    background-color: var(--Input-color);
    border: 1px solid #d1d5db;
    font-weight: bold;
    padding: 8px;
    width: fit-content;
}
input[type=number],
input[type=number]::-webkit-inner-spin-button {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: textfield;
}
#Type {
    cursor: pointer;
}
#status {
    cursor: pointer;
}
#NovelStatus {
	cursor: pointer;
}


/* chapter */
.chapter-container[data-has-previous-chapter="false"] {
	height: 30px;
}
.chapter-container[data-has-previous-chapter="true"] {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	height: 30px;
}

#previousChapter[data-has-previous-chapter="false"] {
	display: none;
}
#previousChapter[data-has-previous-chapter="true"] {
	cursor: default;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	border: none;
	box-sizing: border-box;
	padding: 2px;
	font-size: 14px;
	list-style: none;
	text-align: center;
	scroll-behavior: smooth;
	outline: none;
	outline-width: 0;
	outline-color: var(--Text-color);
	color: var(--Text-color);
	background-image: none;
	background-color: var(--bg-color);
	width: 45%;
	color: var(--Btn_disabled);
	margin: 0;
}

#chapter[data-has-previous-chapter="false"] {
	min-width: 75px;
	width: 100%;
	
}
#chapter[data-has-previous-chapter="true"] {
	width: 45%;
}

#chapterArrow[data-has-previous-chapter="false"] {
	display: none;
}

#chapterArrow[data-has-previous-chapter="true"] {
	display: block;
}

/* ---- bottom-main ---- */

.table-1-container {
    max-width: 10000px;
    overflow-x: hidden;
    width: 100%;
}

.table-1 {
    width: 100%;
    border-collapse: collapse;
    background-color: var(--bg-color);
    table-layout: fixed;
    ;
}

/* tags */
.tags-container {
	position: relative;
	height: 50px;
}

.autocomplete-wrapper {
	/* position: relative; */
	/* display: inline-block; */
	min-width: 20%;
	width: fit-content;
	height: 100%;
}
/* notes */
.notes-header {
	width: 10%;
}
#notes {
	width: 100%;
	text-align: left;
	padding-left: 1%;
}

/* ---- footer ---- */



/* tags container */

.tags-header {
	width: 10%;
	border-top: 0;
}

.tagContainer {
	height: 80px;
	display: flex;
	flex-direction: row;
	border: 1px solid;
}

.tagsLabel, .notesLabel {
	font-size: 14px;
	color: var(--Text-color);
	display: block;
	text-align: center;
	width: 15%;
	max-width: 13%;
	margin-top: 5%;
}

.tags-container {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: normal;
	padding-left: 1%;
	/* width: 98.8%; */
	height: inherit;
	border-top: 0;
	border-bottom: 0;
	border-left: 0;
}

#tags {
	cursor: text;
	/* border: 1px solid; */
	/* width: 20%; */
	text-align: left;
	/* padding-left: 5%; */
	/* margin: 10px; */
	/* height: fit-content; */
	/* align-self: first baseline; */
	background-color: transparent;
	/* max-width: 85%; */
	/* position: absolute; */
	/* left: 15%; */
	/* top: 2%; */
	/* margin-top: 3.5em; */
	/* width: 100%; */
	min-width: 20%;
	width: fit-content;
}

#tag-pill-container {
	width: 100%;
	z-index: 2;
	height: 100%;
	display: flex;
	flex-direction: row-reverse;
	align-items: center;
}

.tag-pill {
	width: fit-content;
	display: flex;
	flex-direction: row;
	/* justify-content: center; */
	align-items: center;
	gap: 5px;
	background-color: rgb(0, 174, 255);
	height: fit-content;
	border-radius: 10px;
	padding-left: 5px;
	padding-right: 5px;
	margin: 5px;
	color: contrast-color(rgb(0, 174, 255));
	border: 1px solid black;
}

.tag-pill-text {
	/* width: fit-content; */
	/* height: fit-content; */
	margin: 0;
}
/* ... */

